# allonet

./: .artifactignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  adjust-staging-dir.sh  alloverse.fbs  asset_store.c  asset_store.h  assetstore.c  azure-pipelines.yml  build.gradle  generate-schema-blob.sh  generate-version.sh  install-cmake.sh
.github/workflows/: linux.yml
bindeps/ffmpeg/: README.md
bindeps/ffmpeg/android-arm64-v8a/lib/: libavutil.so.56  libswscale.so.5
bindeps/ffmpeg/include/libavutil/: ffversion.h
bindeps/ffmpeg/mac-universal/lib/: libavcodec.dylib  libavformat.dylib  libavutil.dylib  libswresample.dylib  libswscale.dylib
bindeps/ffmpeg/windows-x64/lib/: avcodec.lib  avformat.lib  avutil.lib  swscale.lib
cmake/: FindLIBAV.cmake
examples/cubeappliance/: cubeappliance.c
examples/dummyclient/: dummyclient.c
examples/dummyserv/: dummyserv.c
examples/standalone_server/: standalone.c
include/allonet/: allo_job.h  allonet.h  arr.h  asset.h  assetstore.h  client.h  jobs.h  math.h  net.h  server.h  state.h  threading.h
include/allonet/schema/: alloverse.bfbs  alloverse_builder.h  alloverse_reader.h  alloverse_verifier.h  reflection.bfbs  reflection_builder.h  reflection_reader.h
include/allonet/state/: diff.h  intent.h  interaction.h  state_read.h  state_write.h
lang/csharp/: Allonet.sln  README.md  cube.glb
lang/csharp/AlloCsSampleApp/: Program.cs
lang/csharp/Allonet/: AlloApp.cs  AlloClient.cs  AlloEntity.cs  Allonet.csproj  Class1.cs  _Interfaces.cs  allonet.dotnetframework.csproj
lang/csharp/Allonet/ui/: Bounds.cs  View.cs
lang/csharp/AppSample/: AppSample.csproj  SampleApp.cs
lang/csharp/ClientSample/: SampleClient.cs
lang/lua/: README.md  allonet-lua.c  allonet.lua  generate-lua-weak-h.lua  lua-utils.c  lua-utils.h  lua-weak.c  lua-weak.h  sample.lua
lang/python/: allo.py  avatar.json  blender.py  client.h  main.py
lang/python/allonet/: client.h  client.py  lib.py
lang/swift/: README.md
lang/swift/Allonet/: Component.swift  Entity.swift  EntityTests.swift  Identity.swift  IdentityTests.swift  Json.swift  State.swift  StateTests.swift  allo_entity.swift  allo_interaction.swift  allo_state.swift  cJSON.swift  client.swift  component.swift  helpers.swift
lang/swift/Allonet/CAllonet/: allonet  module.modulemap
lang/swift/Allonet/Components/: Collider.swift  Components.swift  ComponentsTests.swift  Geometry.swift  Relationships.swift  Transform.swift
lang/swift/Allonet/Models/: Matrix.swift  TexCoord.swift  Vector.swift
lang/swift/Example/: dummycube.swift  main.swift
lang/swift/Example/Allonet Example.xcodeproj/: project.pbxproj
lang/swift/Example/Allonet Example.xcodeproj/allonet_swift.xcworkspace/: contents.xcworkspacedata
lang/swift/Example/Allonet Example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lang/swift/Example/Allonet Example.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
lang/swift/Example/Allonet.SwiftTests/: Allonet_SwiftTests.swift
lib/: build-x264.sh
lib/nanojpeg/: nanojpeg.h
lib/richgel9999-jpegcompressor/: jpgd.cpp  jpge.cpp
lib/tinyjpeg/: tiny_jpeg.c
src/: _asset.h  allo_gltf.cpp  allo_job.c  alloclient_simple_api.c  alloclient_simple_api.h  alloverse_binary_schema.h  arr.c  asset.c  asset.h  assetstore.c  assetstore.h  client.c  clientproxy.c  clientproxy.h  delta.c  delta.h  get_version.c  jobs.c  math.c  os.c  os.h  server.c  sha1.c  sha1.h  sha256.c  sha256.h  standalone_server.c  standalone_server.cpp  state.c  state_simulation.c  threading.h  uri.h  util.c  util.cpp  util.h
src/client/: _client.h  audio.c  client.c
src/media/: media.c  media.h
src/media/audio/: audio.c  audio.h
src/media/video/: h264.c  h264.h  libav.c  mjpeg.cpp  mjpeg.h  video.c
src/os/: os_android.c  os_macos.c  os_win32.c
src/simulation/: animation.c  animation.cpp  animation.h  animation_prop.c  animation_prop.cpp  grabbing.c  grabbing.cpp  pose_movement.c  pose_movement.cpp  simulation.c  simulation.cpp  simulation.h  stick_movement.c  stick_movement.cpp
src/state/: diff.c  diff.cpp  intent.c  interaction.c  state.c  state_read.c  state_read.cpp  state_write.c  state_write.cpp
src/video/: mjpeg.c  mjpeg.cpp  mjpeg.h  video.c
test/: asset_test.c  assetstore_test.c  delta_test.c  jobs_test.c  math_test.c  state_test.c
